--- a/hw1.html
+++ b/hw1.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="Fall 2024 CSM Javascript course Homework #1">
+    <meta name="description" content="CSM Javascript course Homework #1 Fall 2024">
     <title>CSM Javascript course Homework #1 Fall 2024</title>
     <link rel="stylesheet" href="hw1.css">
 </head>
@@ -16,12 +16,12 @@
 
     <nav>
         <a href="hw2.html" class="button">Homework #2</a><br>
-        <a href="hw2.html" class="button">Homework #3</a><br>
-        <a href="hw2.html" class="button">Homework #4</a><br>
-        <a href="hw2.html" class="button">Homework #5</a><br>
-        <a href="hw2.html" class="button">Homework #6</a><br>
-        <a href="hw2.html" class="button">Homework #7</a><br>
-        <a href="hw2.html" class="button">Homework #8</a><br>
+        <a href="#" class="button">Homework #3</a><br>
+        <a href="#" class="button">Homework #4</a><br>
+        <a href="#" class="button">Homework #5</a><br>
+        <a href="#" class="button">Homework #6</a><br>
+        <a href="#" class="button">Homework #7</a><br>
+        <a href="#" class="button">Homework #8</a><br>
     </nav>
 </body>
 </html>
