--- a/hw2.html
+++ b/hw2.html
@@ -10,17 +10,28 @@
 
 <body>
 <header>
-    <h1>CIS 114 Homework</h1>
+    <h1>Homework 2 - Basic Operations</h1>
     <h3>by Yvonne Fan, Fall 2024</h3>
 </header>
     <br>
     <br>
     <br>
-    <h1> Coming Soon!</h1>
-    <footer>
+    <nav>
+        <a href="document_write.html" class="button">Part 1<br><small>Using document.write()
+        to display letters and numbers in different colors and fonts.</small></a><br><br>
+        <a href="form.html" class="button">Part 2<br><small>
+        Using getElementById and innerHTML to take three integers 
+        from form inputs and display the calcuation results 
+        (min, ave, product, min, max) below the form in a div area.</small></a><br><br>
+        <a href="exchange_rates.html" class="button">Extra credits<br><small>
+        Using getElementById and innerHTML to take an U.S. dollars amount input 
+        and display the currency conversion results on the 3rd colomn of the same table.
+        </small></a>
+    </nav>
+<footer>
     <nav>
         <a href="hw1.html">Back to Main page</a>
     </nav>
-    </footer>
+</footer>
 </body>
 </html>
