--- a/document_write.html
+++ b/document_write.html
@@ -11,12 +11,12 @@
 <body>
 <header>
     <h2>Homework 2 - Basic Operations Part 1</h2>
-    <strong>Using document.write() to display letters and numbers in different 
-        colors and fonts, separated by one blank space.</strong>
 </header>
 
 <section>
-    <br><br><br>
+<h4>Using document.write() to display letters and numbers in different 
+    colors and fonts, separated by one blank space.</h4>
+<br><br>
 <script>  
     // Javascript document.write xy in bold, 'Times New Roman', and color red
     document.write("<strong style=\"color: red; font-family: 'Time New Roman';\">xy</strong>");
