--- a/exchange_rates.html
+++ b/exchange_rates.html
@@ -11,16 +11,16 @@
 </head>
 
 <body onload="popRates()">
+
 <header>
 <h2>Homework 2 - Basic Operations<br>Extra Credit</h2>
-<strong>Using getElementById and innerHTML to take an U.S. 
-    dollars amount input and display the currency conversion 
-    results on the 3rd colomn of the same table.</strong>
 </header>
 
-
 <section>
-<br><br><br>
+<h4>Using getElementById and innerHTML to take a U.S. 
+    dollar amount input and display the currency conversion 
+    results on the 3rd column of the same table.</h4>
+<br><br>
     <form name="FXform" onsubmit="FXconversion(); return false;">
     <table id="FXtable">
         <caption style="display: none;">Exchange Rates</caption>
