--- a/form.html
+++ b/form.html
@@ -13,14 +13,13 @@
 <body>
 <header>
 <h2>Homework 2 - Basic Operations Part 2</h2>
-<strong>Using getElementById and innerHTML to take three integers 
-    from form inputs and display the calcuation results 
-    (min, ave, product, min, max) below the form in a div area.</strong>
 </header>
 
-
 <section>
-<br><br><br>
+<h4>Using getElementById and innerHTML to take three integers 
+        from form inputs and display the calcuation results 
+        (min, ave, product, min, max) below the form in a div area.</h4>
+<br><br>
 <form name="numForm" onsubmit="process(); return false">
 <table>
     <tr>
