--- a/hw2.html
+++ b/hw2.html
@@ -24,8 +24,8 @@
         from form inputs and display the calcuation results 
         (min, ave, product, min, max) below the form in a div area.</small></a><br><br>
         <a href="exchange_rates.html" class="button">Extra credits<br><small>
-        Using getElementById and innerHTML to take an U.S. dollars amount input 
-        and display the currency conversion results on the 3rd colomn of the same table.
+        Using getElementById and innerHTML to take a U.S. dollar amount input 
+        and display the currency conversion results on the 3rd column of the same table.
         </small></a>
     </nav>
 <footer>
