--- a/sales.html
+++ b/sales.html
@@ -30,13 +30,13 @@
     <input type="text" id="seller" name="seller" size="30">
     <p>For each item type the quantity sold by the seller below:</p>
     <p><label for="item1">Item 1:</label>
-    <input type="number" id="item1" name="item1" size="10"></p>
+    <input type="number" id="item1" name="item1"></p>
     <p><label for="item2">Item 2:</label>
-    <input type="number" id="item2" name="item2" size="10"></p>
+    <input type="number" id="item2" name="item2"></p>
     <p><label for="item3">Item 3:</label>
-    <input type="number" id="item3" name="item3" size="10"></p>
+    <input type="number" id="item3" name="item3"></p>
     <p><label for="item4">Item 4:</label>
-    <input type="number" id="item4" name="item4" size="10"></p>
+    <input type="number" id="item4" name="item4"></p>
 <br>
 
 <input type="button" onclick="calcSales()" value="SUBMIT">
@@ -64,36 +64,36 @@
     <tr>
         <td>1</td>
         <td></td>
-        <td align="right"></td>
-        <td align="right"></td>
+        <td></td>
+        <td class="right"></td>
     </tr>
     <tr>
         <td>2</td>
         <td></td>
-        <td align="right"></td>
-        <td align="right"></td>
+        <td></td>
+        <td class="right"></td>
     </tr>
     <tr>
         <td>3</td>
         <td></td>
-        <td align="right"></td>
-        <td align="right"></td>
+        <td></td>
+        <td class="right"></td>
     </tr>
     <tr>
         <td>4</td>
         <td></td>
-        <td align="right"></td>
-        <td align="right"></td>
+        <td></td>
+        <td class="right"></td>
     </tr>
     </tbody>
     <tfoot>
     <tr>
         <td colspan="3"><strong>Total Amount Sold</strong></td>
-        <td id="totalAmount" align="right"></td>
+        <td class="right"></td>
     </tr>
     <tr>
         <td colspan="3"><strong>Total Weekely Earnings</strong></td>
-        <td id="totalEarning" align="right"></td>
+        <td class="right"></td>
     </tr>
     </tfoot>
 
