--- a/student_grades.html
+++ b/student_grades.html
@@ -51,10 +51,9 @@
 <div id="results"></div>
 <br><br><br>
 -->
-<br>
 
 <br>
-<p><h3><u>Final Grade Calculation (after form submission):</u></h3></p>
+<h3><u>Final Grade Calculation (after form submission):</u></h3>
 <div id="results"></div>
 <br><br>
 
