--- a/hw1.html
+++ b/hw1.html
@@ -17,7 +17,7 @@
     <nav>
         <a href="hw2.html" class="button">Homework #2</a><br>
         <a href="hw3.html" class="button">Homework #3</a><br>
-        <a href="#" class="button">Homework #4</a><br>
+        <a href="hw4.html" class="button">Homework #4</a><br>
         <a href="#" class="button">Homework #5</a><br>
         <a href="#" class="button">Homework #6</a><br>
         <a href="#" class="button">Homework #7</a><br>
