--- a/2Darray.html
+++ b/2Darray.html
@@ -27,8 +27,9 @@
 <br><br>
 
 <form name="myForm">
-<p><label for="name"><h4>Enter the Full Name or Abbreviation of<br>
-                     the state you want more info:</h4></label>
+<p><label for="name">
+<pre>Enter the Full Name or Abbreviation of 
+the state you want more info:</pre></label>
 <input type="text" id="name" name="name" size="30"><br></p>
 
 <input type="button" onclick="getCensus()" value="STATE INFO">
