--- a/radioCheckboxPulldown.html
+++ b/radioCheckboxPulldown.html
@@ -44,7 +44,7 @@
 <input type="checkbox" name="browsers" id="browser4" value="Safari"><label for="browser4">Safari</label><br>
 </p>
 
-<p><strong>Choose the type of movies you prefer:</strong><br><br>
+<p><strong><label for="movie">Choose the type of movies you prefer:</label></strong><br><br>
 <select name="movie" id="movie">
 <option>Choose type of movie:</option>
 <option value="Action">Action</option>
