--- a/2Darray.html
+++ b/2Darray.html
@@ -27,10 +27,10 @@
 <br><br>
 
 <form name="myForm">
-<p><label for="name">
-<pre>Enter the Full Name or Abbreviation of 
-the state you want more info:</pre></label>
-<input type="text" id="name" name="name" size="30"><br></p>
+<strong><label for="name">
+Enter the Full Name or Abbreviation of<br>
+the state you want more info:</label></strong><br>
+<input type="text" id="name" name="name" size="30"><br><br>
 
 <input type="button" onclick="getCensus()" value="STATE INFO">
 <input type="reset" value="CLEAR FORM" onclick="location.reload()">
