--- a/hw1.html
+++ b/hw1.html
@@ -19,7 +19,7 @@
         <a href="hw3.html" class="button">Homework #3</a><br>
         <a href="hw4.html" class="button">Homework #4</a><br>
         <a href="hw5.html" class="button">Homework #5</a><br>
-        <a href="#" class="button">Homework #6</a><br>
+        <a href="hw6.html" class="button">Homework #6</a><br>
         <a href="#" class="button">Homework #7</a><br>
         <a href="#" class="button">Homework #8</a><br>
     </nav>
