--- a/hw6.html
+++ b/hw6.html
@@ -23,7 +23,7 @@
             Display rounting results or error messages below form in the result area.
             </small></a><br><br>
         <a href="char_search.html" class="button">Part 2<br><small>
-            Using Regex to search for a single character in a long text :<br>
+            Using charAt() & for loop to search for a single character in a long text :<br>
             - If found, display # of occurances <br>
             - If not found, open a new window with an error message.</small></a><br><br>
         <a href="phone_regex.html" class="button">Part 3<br><small>
