--- a/phone_regex.html
+++ b/phone_regex.html
@@ -20,7 +20,8 @@
 
 <section>
     <form name="myForm">
-        <label for="phone">Enter a Phone number [in (999) 999-9999 format]: </label><br>
+        <label for="phone">Enter a Phone number<br>
+         [in (999) 999-9999 or (999)999-9999 format]: </label><br>
         <input type="text" name="phone" id="phone" size="20" autofocus><br><br>
         <input type="button" value="SUBMIT" onclick="checkPhone();">
         <input type="reset" value="CLEAR FORM" onClick="location.reload();">
