--- a/cookies.html
+++ b/cookies.html
@@ -18,7 +18,7 @@
 <h2>Cookies</h2>
 </header>
 
-<section>
+<main>
 <p id="result"></p>
 <div id="myform">
 <form>
@@ -33,7 +33,7 @@
 <br><br>
 <div id="errMsg"></div>
 
-</section>
+</main>
 
 <footer>
     <nav>
