--- a/hw1.html
+++ b/hw1.html
@@ -21,7 +21,7 @@
         <a href="hw5.html" class="button">Homework #5</a><br>
         <a href="hw6.html" class="button">Homework #6</a><br>
         <a href="hw7.html" class="button">Homework #7</a><br>
-        <a href="#" class="button">Homework #8</a><br>
+        <a href="ajaxassignment.html" class="button">Homework #8</a><br>
     </nav>
 </body>
 </html>
