--- a/ajaxassignment.html
+++ b/ajaxassignment.html
@@ -135,7 +135,7 @@ response in JSON format.
 (e.g. pikachu, typhlosion, bulbasaur)</strong><br>
 <input type="text" id="pokemonName" placeholder="Enter Pokemon name">
 <button onclick="fetchData()">Fetch Pokémon Sprite</button><br>
-<img alt="Pokemon Sprite" id="pokemonSprite" style="display: none">
+<img src=" " alt="Pokemon Sprite" id="pokemonSprite" style="display: none">
 <div id="errMsg"></div>
 </main>
 
